<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#DBE9F1"
tools:context=".MainActivity">

<TextView
    android:id="@+id/bannerTop"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/shape"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/banner2"
    app:layout_constraintTop_toTopOf="parent" />
<TextView
    android:id="@+id/profile_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ProfileName"
    android:textSize="20sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    app:layout_constraintStart_toEndOf="@+id/profile1"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/banner2"
    android:layout_marginTop="20dp"
    android:layout_marginStart="10dp"
    />

<ImageView
    android:id="@+id/banner2"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:layout_marginTop="100dp"
    android:src="@drawable/picture2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/bannerTop" />

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/profile1"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:src="@drawable/picture1"
    app:layout_constraintBottom_toTopOf="@+id/banner2"
    app:layout_constraintStart_toStartOf="@+id/banner2"
    app:layout_constraintTop_toTopOf="@+id/bannerTop"

    />

<TextView
    android:id="@+id/categoryText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/category"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="@+id/banner2"
    app:layout_constraintTop_toBottomOf="@+id/banner2" />

<Button
    android:id="@+id/btnview"
    android:layout_width="80dp"
    android:layout_height="48dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/shape2"
    android:text="@string/viewBtn"
    android:textColor="#0B2035"
    android:textSize="13sp"
    app:layout_constraintEnd_toEndOf="@+id/banner2"
    app:layout_constraintStart_toEndOf="@+id/categoryText"
    app:layout_constraintTop_toBottomOf="@+id/banner2"
    />

<LinearLayout
    android:id="@+id/lnrout1"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginTop="20dp"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnview">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:src="@drawable/maths"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/maths" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/physics"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/physics" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/english"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/english" />

    </androidx.cardview.widget.CardView>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lnrout1">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/chemistry"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/chemistry" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/geography"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/geography" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/sports"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/sports" />

    </androidx.cardview.widget.CardView>


</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>